--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@angular/compiler": "~11.0.6",
     "@angular/core": "~11.0.6",
     "@angular/forms": "~11.0.6",
+    "@angular/localize": "~11.0.6",
     "@angular/material": "^11.2.10",
     "@angular/platform-browser": "~11.0.6",
     "@angular/platform-browser-dynamic": "~11.0.6",
     "@angular/router": "~11.0.6",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.1",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
